# Cobot_Barman

./: .env-ex  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/api/: admin.py  cocktails.py  glasses.py  main.py  orders.py  robot.py
backend/app/robot_src/: simu_efort.py
backend/app/rpc/: ur.py  xmlrpc_server.py
backend/app/utils/: cocktail.py  glasses.py  load_json.py  robot.py
backend/database/: db.py  test.json
backend/robot_src/: init_onrobot.script  simu_efort.py
backend/utils/: load_json.py  robot.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminModal.tsx  BentoGrid.tsx  CocktailCard.tsx  Navbar.tsx  ToastContainer.tsx
frontend/src/components/admin/: AddCocktailForm.tsx  EditCocktailForm.tsx  EditCocktailModal.tsx  EditGlassModal.tsx  GlassesTab.tsx
frontend/src/hooks/: useCocktails.ts  useToast.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
robot_src/: simu_efort.py
