[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
]
